packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__vertical_line_when_waiting_entries_scrolled_out.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                "
" NX    Test Tasks                                            Cache   Duration   "
"                                                                               ↑"
"> ·    app10:test                                              ...        ...  ║"
"  ·    app1:test                                               ...        ...  █"
"  ·    app2:test                                               ...        ...  █"
"  ·    app3:test                                               ...        ...  ║"
"  ·    app4:test                                               ...        ...  ║"
"  ·    app5:test                                               ...        ...  ║"
"                                                                               ↓"
