packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__vertical_line_with_waiting_entries_visible.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
assertion_line: 3482
expression: terminal.backend()
---
"                                                                                "
" NX    Running Test Tasks...                                 Cache   Duration   "
" │                                                                             ↑"
" │·    Waiting for task...                                                     █"
" │·    Waiting for task...                                                     █"
" └                                                                             ║"
"> ·    app10:test                                              ...        ...  ║"
"  ·    app1:test                                               ...        ...  ║"
"  ·    app2:test                                               ...        ...  ║"
"  ·    app3:test                                               ...        ...  ↓"
