packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__very_narrow_layout_handling.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                         "
" NX    Test Tasks        "
"                         "
"> ⠋    app1:test         "
"                         "
"  ·    app1:build        "
"  ·    app2:lint         "
"                         "
"                         "
"                         "
"                         "
"                         "
"                         "
"                         "
"                         "
