packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__very_narrow_pag_help_handling.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                         "
" NX    Running Test Tasks"
"                         "
"    ⠋  task1             "
"                         "
">   ·  task2             "
"    ·  task3             "
"                         "
"                         "
"                         "
"                         "
"                         "
"                         "
"                         "
"  ← 1/1 →                "
