packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__very_narrow_width_rendering.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                    "
" NX    Running Test "
" │                  "
">│⠋    app1:test    "
" │·    Waiting for t"
" └                  "
"  ·    app1:build   "
"  ·    app2:lint    "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
