packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__wide_and_short_rendering.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                                                                "
" NX    Test Tasks                                                                                                                               Cache   Duration"
"                                                                                                                                                                "
"> ⠋    app1:test                                                                                                                                  ...       <1ms"
"                                                                                                                                                                "
"  ·    app1:build                                                                                                                                 ...        ..."
"  ·    app2:lint                                                                                                                                  ...        ..."
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
